@@ -37,6 +37,19 @@
 #define IF_NAMESIZE IFNAMSIZ
 #endif
 
+#ifdef CONFIG_IPV6
+#define _PATH_PROCNET_IPV6		"/proc/net/if_inet6"
+
+#define SIXRD_SIG	"6rd"
+#define SIX2FOUR_SIG	"sit"
+
+#define IPV6_ADDR_GLOBAL        0x0000U
+#define IPV6_ADDR_LOOPBACK      0x0010U
+#define IPV6_ADDR_LINKLOCAL     0x0020U
+#define IPV6_ADDR_SITELOCAL     0x0040U
+#define IPV6_ADDR_COMPATv4      0x0080U
+#endif
+
 void formDefineInternet(void);
 void initInternet(void);
 char* getLanIfName(void);
