@@ -1101,6 +1101,8 @@
 <b>3.3.x</b><br>
 1) goahead: add hardware traffic counters from switch to WebUI.<br>
 2) goahead: use 3600 secs as default rekey interval for new BSSIDs.<br>
+3) goahead: add ipv6 interfaces adresses to statisctic page.<br>
+4) goahead: show dgw interface name if dgw add over if without ip adress at next hop.<br>
 <br>
 <br>
 <b>TODO:</b><br>
